Project Detail Page

--- a/ProjecTrail/ProjecTrail.csproj
+++ b/ProjecTrail/ProjecTrail.csproj
@@ -69,7 +69,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Pages\NewProjectModalPage.xaml">
+	  <Compile Update="View\ProjectDetailPage.xaml.cs">
+	    <DependentUpon>ProjectDetailPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="View\ProjectDetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="View\NewProjectModalPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
