--- a/ProjecTrail/ProjecTrail.csproj
+++ b/ProjecTrail/ProjecTrail.csproj
@@ -66,6 +66,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 	</ItemGroup>
 
 	<ItemGroup>
